--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -57,6 +57,9 @@ Style/AndOr:
 Style/RedundantSelf:
   Enabled: True
 
+Metrics/BlockLength:
+  Enabled: False
+
 # Method length is not necessarily an indicator of code quality
 Metrics/MethodLength:
   Enabled: False
@@ -506,4 +509,12 @@ RSpec/ExampleLength:
   Enabled: False
 
 RSpec/NamedSubject:
+  Enabled: False
+
+# disabled for now since they cause a lot of issues
+# these issues aren't easy to fix
+RSpec/RepeatedDescription:
+  Enabled: False
+
+RSpec/NestedGroups:
   Enabled: False
